fixed ruby text not showing in kanji hover for 132 theme

--- a/themes/132_anime_card/scss/theme/style.scss
+++ b/themes/132_anime_card/scss/theme/style.scss
@@ -112,7 +112,7 @@
 
 
 /* removes ruby text on back side word */
-.dh-left__reading ruby rt {
+.dh-left__reading > ruby > rt {
   display: none;
 }
 
